--- a/PortableWidget/packages.config
+++ b/PortableWidget/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Elysium.Theme" version="2.0.4" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net452" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.106.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net452" />
   <package id="System.Data.SQLite.EF6" version="1.0.106.0" targetFramework="net452" />
