Implemented CpuPage data updater

--- a/PortableWidget/PortableWidget.csproj
+++ b/PortableWidget/PortableWidget.csproj
@@ -114,7 +114,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Core\Analyzer.cs" />
+    <Compile Include="Core\Analyser.cs" />
     <Compile Include="Core\Cpu.cs" />
     <Compile Include="Core\Disk.cs" />
     <Compile Include="Core\Gpu.cs" />
