--- a/PortableWidget/PortableWidget.csproj
+++ b/PortableWidget/PortableWidget.csproj
@@ -119,11 +119,7 @@
     <Compile Include="Core\Disk.cs" />
     <Compile Include="Core\Gpu.cs" />
     <Compile Include="Core\Ram.cs" />
-    <Compile Include="Data\CpuData.cs" />
-    <Compile Include="Data\DiskData.cs" />
-    <Compile Include="Data\EthernetData.cs" />
-    <Compile Include="Data\GpuData.cs" />
-    <Compile Include="Data\RamData.cs" />
+    <Compile Include="Data\CoreData.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -204,7 +200,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Databases\" />
