--- a/PortableWidget/PortableWidget.csproj
+++ b/PortableWidget/PortableWidget.csproj
@@ -125,6 +125,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\AboutPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\CpuPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -153,6 +157,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Pages\RecomendationsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\SettingsPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Cpu.cs" />
@@ -160,6 +172,9 @@
     <Compile Include="Models\Ethernet.cs" />
     <Compile Include="Models\Gpu.cs" />
     <Compile Include="Models\Ram.cs" />
+    <Compile Include="Pages\AboutPage.xaml.cs">
+      <DependentUpon>AboutPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\CpuPage.xaml.cs">
       <DependentUpon>CpuPage.xaml</DependentUpon>
     </Compile>
@@ -180,6 +195,12 @@
     </Compile>
     <Compile Include="Pages\RamPage.xaml.cs">
       <DependentUpon>RamPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\RecomendationsPage.xaml.cs">
+      <DependentUpon>RecomendationsPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\SettingsPage.xaml.cs">
+      <DependentUpon>SettingsPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
